Added pdf raport export

--- a/angularping/apptest/documentation/coverage.html
+++ b/angularping/apptest/documentation/coverage.html
@@ -199,6 +199,18 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
+                        <a href="./interfaces/RaportResponse.html">src/app/bodystats/bodystats.ts</a>
+            </td>
+            <td>interface</td>
+            <td>RaportResponse</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(3/3)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
                         <a href="./components/Header.html">src/app/header/header.ts</a>
             </td>
             <td>component</td>
