--- a/angularping/apptest/documentation/dependencies.html
+++ b/angularping/apptest/documentation/dependencies.html
@@ -143,7 +143,13 @@
         <li>
             <b>http-proxy-middleware</b> : ^3.0.5</li>
         <li>
+            <b>jspdf</b> : ^4.0.0</li>
+        <li>
+            <b>jspdf-autotable</b> : ^5.0.7</li>
+        <li>
             <b>mysql2</b> : ^3.16.0</li>
+        <li>
+            <b>pdfkit</b> : ^0.17.2</li>
         <li>
             <b>rxjs</b> : ~7.8.0</li>
         <li>
